11-ingress-nginx-aws-clb/2-productreviewms-pod.yml
apiVersion: v1
kind: Pod
metadata:
  name: productreviewms-pod
  namespace: microserviceworkshop
  labels:
    app: productreviewms
    zone: prod
    version: v1
spec:
  containers:
  - name: productreviewms-cntr
    image: ketangote/productreviewms:v1
    imagePullPolicy: IfNotPresent
    ports:
     - containerPort: 8080
