11-ingress-nginx-aws-clb/1-productms-service.yml
apiVersion: v1
kind: Service
metadata:
  name: productms-svc
  namespace: microserviceworkshop
  labels:
    app: productms-svc
spec:
  selector:
    app: productms
  type: ClusterIP
  ports:
   - port: 80
     targetPort: 8080
     protocol: TCP
     name: http
